# floating-ui-rs

./: Cargo.toml  README.md
src/: error.rs  lib.rs
src/floating_ui/: mod.rs
src/floating_ui/core/: elements.rs  middleware.rs  middleware_return.rs  middleware_state.rs  mod.rs  promisable.rs
src/floating_ui/core/middleware_data/: arrow.rs  auto_placement.rs  hide.rs  mod.rs  offset.rs
src/floating_ui/dom/: auto_update.rs  compute_position.rs  middleware.rs  mod.rs
src/floating_ui/utils/: aligned_placement.rs  client_rect_object.rs  mod.rs  padding.rs  placement.rs  rect.rs  side_object.rs
src/utils_/: enum_union.rs  extends.rs  index.rs  key_in.rs  maybe_from.rs  mod.rs  object_utils.rs  string_union.rs
