[package]
name = "floating-ui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"   
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlDocument", "HtmlElement", "CssStyleDeclaration"] }
js-sys = "0.3.69"
thiserror = "1.0"
static_assertions = "1.1.0"